ikubernetes_1.16.2/user-kubernetes/networkpolicy/allow-ipblock-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: all-ipblock-ingress
  namespace: dev
spec:
  podSelector:
    matchLabels:
      name: nginx 
  policyTypes: ["Ingress"]
  ingress:
  - from:
    - ipBlock:
        cidr: 10.244.0.0/16
        except:
        - 10.244.3.0/24
    ports:
    - protocol: TCP
      port: 80
