ikubernetes_1.16.2/user-kubernetes/networkpolicy/allow-pro-ns-to-port-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-pro-ns-ingress
  namespace: dev
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          env: pro
    ports:
    - port: 80
  policyTypes:
  - Ingress
