ikubernetes_1.16.2/user-kubernetes/networkpolicy/deny-all-ns-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ns-ingress
  namespace: dev
spec:
  podSelector: {}
  policyTypes:
  - Ingress
